# role-voice

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml
docs/: architecture.md  configuration.md  contributing.md  installation.md  permissions-macos.md
scripts/: benchmark_stt.py  test_microphone.py
src/role_voice/: __main__.py  app.py  cli.py  config.py
src/role_voice/audio/: capture.py  preprocessing.py  types.py
src/role_voice/input/: hotkey.py  types.py
src/role_voice/stt/: base.py  factory.py  faster_whisper_engine.py  mlx_engine.py
src/role_voice/targets/: base.py  claude_code.py  clipboard.py  factory.py  terminal.py
src/role_voice/ui/: console.py
tests/: conftest.py
tests/unit/: test_audio.py  test_config.py  test_hotkey.py  test_stt.py  test_targets.py
